<resources>
    <string name="app_name">Bakery Products</string>
    <string name="produto">Product</string>
    <string name="limpar">Clear</string>
    <string name="adicionar">Add</string>
    <string name="erro_nome">The product must have a name!</string>
    <string name="mesa">Table</string>
    <string name="localProduto">"Product Location: "</string>
    <string name="vitrineGelada">Cold Display</string>
    <string name="campos_limpos">Fields Cleared!</string>
    <string name="foi_adicionado">" was added!"</string>
    <string name="doces">Sweets</string>
    <string name="salgados">Savory</string>
    <string name="bolos">Cakes</string>
    <string name="paes">Breads</string>
    <string name="validade">"Expiration Date: "</string>
    <string name="selecioneCampo">Select a location for the product!</string>
    <string name="foi_selecionado">" was selected!"</string>
    <string name="tresDias">3 days</string>
    <string name="seteDias">7 days</string>
    <string name="dozeDias">12 days</string>
    <string name="vinteEUmDias">21 days</string>

    <string name="paoDoce">"Pão doce"</string>
    <string name="mousseDeLimao">"Mousse de limão"</string>
    <string name="beirute">"Beirute"</string>
    <string name="coxinhaDeFrango">"Coxinha de frango"</string>
    <string name="boloDeCenoura">"Bolo de cenoura"</string>
    <string name="paoDeQueijo">"Pão de queijo"</string>
    <string name="brevidade">"Brevidade"</string>
    <string name="pudimDeLeite">"Pudim de leite"</string>
    <string name="tortaDeMorango">"Torta de morango"</string>
    <string name="banoffe">"Banoffe"</string>
    <string name="dias">Days</string>
    <string name="validade1">"Validity: "</string>
    <string name="local_do_produto">"Product Location: "</string>
    <string name="produto1">"Product: "</string>
    <string name="sobre">About</string>
    <string name="funcionalidades">Application developed to control a baker\'s production</string>
    <string name="autor">Author: Philippe Giovanelli C. Andrade</string>
    <string name="email">philippe.giovanelli@hotmail.com</string>
    <string name="universidade_federal_do_parana">Federal University of Paraná</string>
    <string name="editar">Edit</string>
    <string name="excluir">Delete</string>
    <string name="novo_produto">New Product</string>
    <string name="editar_produto">Edit Product</string>
    <string name="ordenacao">Sorting</string>
    <string name="vitrineQuente">Hot Display</string>
    <string name="selecione_uma_categoria_de_produto">Select a product category</string>
    <string name="tipo_do_produto">"Product Type: "</string>
    <string name="disciplina">Java Specialization</string>
    <string name="foi_clicado">was clicked!</string>
    <string name="diaas">" days."</string>
    <string name="aviso">Warning</string>
    <string name="ok">OK</string>
    <string name="confirmacao">Confirmation</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="deseja_realmente_apagar">Do you really want to delete?</string>
    <string name="erro_ao_tentar_inserir">Error trying to insert!</string>
    <string name="erro_ao_tentar_alterar">Error trying to change!</string>
    <string name="erro_ao_tentar_apagar">Error trying to delete!</string>

</resources>